[project]
name = "splight-lib"
version = "5.22.5"
description = "Splight Python Library"
authors = [
    {name = "Splight Dev",email = "dev@splight.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "apscheduler==3.10.4",
    "concurrent-log-handler==0.9.21",
    "cryptography==44.0.1",
    "email-validator>=2.1.0.post1,<3.0.0",
    "furl==2.1.3",
    "geojson-pydantic==1.0.1",
    "hexbytes==0.2.2",
    "httpx==0.28.1",
    "jinja2==3.1.4",
    "mergedeep==1.3.4",
    "numpy==1.26.0",
    "pandas==2.2.3",
    "parameterized==0.8.1",
    "pathspec==0.11.1",
    "progressbar2==4.4.1",
    "py7zr==0.20.8",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "pytz==2025.2",
    "pyyaml==6.0.1",
    "requests>=2.26.0",
    "retry==0.9.2",
    "simplejson==3.17.6",
    "strenum==0.4.9",
    "typer==0.15.1",
    "typing-extensions>=4.6.1,<5.0.0",
]

[dependency-groups]
dev = [
    "black==24.3.0",
    "flake8==6.1.0",
    "ipdb>=0.13.13",
    "ipython==8.12.2",
    "isort==5.12.0",
    "jsonref==1.1.0",
    "openapi-schema-validator==0.6.2",
    "polyfactory==2.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-mock>=3.12.0",
    "ruff==0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.build-backend]
module-name = "splight_lib"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::RuntimeWarning",
    "ignore::UserWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore::pytest.PytestAssertRewriteWarning",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "trash",
]

# Same as Black.
line-length = 79
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
extend-select = ["F", "I"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
